# TrainTicketSystem_2022

./: .UserIndex_info.swl  .UserIndex_info.swm  .UserIndex_info.swn  .UserIndex_info.swo  .UserIndex_info.swp  .swp  1.in  2.in  BlockList.hpp  CBPlusTree ex.hpp  CBPlusTree pre2.hpp  CBPlusTree tmp.hpp  CBPlusTree.cpp  CBPlusTree.h  CBPlusTree.hpp  CMakeLists.txt  Exceptions.hpp  MemoryRiver ex2.hpp  MemoryRiver pre.hpp  MemoryRiver.hpp  MemoryRiver_no_rollback.hpp  Order.cpp  Q&A.txt  README.md  REANDME.md  Trainticket tmp.cpp  Trainticket.cpp  Trainticket.h  User.cpp  User.h  UserData  UserIndex_data  UserIndex_info  a  main.cpp  run_judge.py  test  test.cpp  开发文档.md
back/: CMakeLists.txt
back/cmake/: 0.ans  0.in  CMakeCache.txt  Makefile  cmake_install.cmake  code  test.cpp
back/lib/: vector.hpp
back/src/: BlockList.hpp  CBPlusTree.hpp  Exceptions.hpp  MemoryRiver ex.hpp  Order.cpp  Order.h  Trainticket.cpp  User.cpp  User.h  main.cpp
cmake/: -test  .editconflig  0.ans  0.in  1.ans  1.in  10.ans  10.in  10.out  11.ans  11.in  11.out  12.ans  12.in  12.out  13.in  13.out  14.ans  14.in  15.ans  15.in  15.out  16.in  17.ans  17.in  18.ans  18.out  19.ans  19.in  19.out  2.ans  2.in  2.out  20.ans  20.in  20.out  3.ans  3.in  3.out  4.ans  (+57 more)
cmake/Data/: DayTrainData  DayTrainData_inside_rollback  DayTrainData_rollback  DayTrainIndexInternalStore  DayTrainIndexInternalStore_memory_recycling  DayTrainIndexLeafStore_memory_recycling  OrderData  OrderData_inside_rollback  OrderData_rollback  OrderIndexInternalStore  OrderIndexInternalStore_memory_recycling  (+46 more)
data/: config.json
doc/: 前端文档.md  开发文档.md
front/: nginx.conf  php.ini
planewar/: CMakeLists.txt  background.cpp  background.h  config.h  main.cpp  mainscene.cpp  mainscene.h  my_plane.cpp  my_plane.h  resource.qrc  resource.rcc
(+157 files in other folders)
